# 99-haskell-problems

./: 99haskell.cabal  README.md
src/: Problems_01_10.hs  Problems_11_20.hs  Problems_21_28.hs
test/: MainTests.hs  Tests_01_10.hs  Tests_11_20.hs  Tests_21_28.hs
