name:                99haskell
version:             1.0.0
homepage:            https://github.com/mlhoutel/99-haskell-problems
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problems_01_10
                        , Problems_11_20
                        , Problems_21_28
  build-depends:       base >= 4.7 && < 5
                        , random
  default-language:    Haskell2010

test-suite 99haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTests.hs
  build-depends:       base
                     , 99haskell
                     , tasty
                     , tasty-hunit
  other-modules:       Tests_01_10
                     , Tests_11_20
                     , Tests_21_28
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mlhoutel/99-haskell-problems